k8s-stuff/k8s-ingress-gke-multiple-backend-svc-master/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  namespace: cdn-api
  name: my-deployment
spec:
  selector:
    matchLabels:
      purpose: cdn
  replicas: 2
  template:
    metadata:
      labels:
        purpose: cdn
    spec:
      containers:
      - name: echo-amd64
        image: gcr.io/google-samples/hello-app-cdn:1.0
