k8s-stuff/k8s-ingress-gke-multiple-backend-svc-master/service2.yaml
apiVersion: v1
kind: Service
metadata:
  namespace: cdn-api
  name: my-service2
  labels:
    purpose: cdn2
  annotations:
    beta.cloud.google.com/backend-config: '{"ports": {"80":"backend-config"}}'
    cloud.google.com/neg: '{"ingress": true}'
spec:
  type: NodePort
  selector:
    purpose: cdn2
  ports:
  - port: 80
    protocol: TCP
    targetPort: 8080
