k8s-stuff/k8s-ingress-gke-multiple-backend-svc-master/ingress.yaml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  namespace: cdn-api
  name: my-ingress
  annotations:
    kubernetes.io/ingress.global-static-ip-name: "a-ingress-ip"
    ingress.kubernetes.io/rewrite-target: /
spec:
  backend:
    serviceName: my-service
    servicePort: 80
  rules:
  - host: load.openshift.pcflabcog.com
    http:
      paths:
      - path: /
        backend:
          serviceName: my-service
          servicePort: 80 
      - path: /api
        backend:
          serviceName: my-service2
          servicePort: 80
